<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#49ff00">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:text="@string/btnHistorico"/>

    </FrameLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/Jogo"
            android:gravity="center"/>

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/Data"
            android:gravity="center"/>

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/Acertos"
            android:gravity="center"/>

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/Valor"
            android:gravity="center"/>

    </LinearLayout>


    <ListView
        android:id="@+id/lvHistorico"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>

</LinearLayout>