<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#49ff00">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:text="@string/btnGerador"/>

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lb1Numero"/>

            <EditText
                android:id="@+id/edtVarSem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lb2Numero"/>

            <EditText
                android:id="@+id/edtVarMes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lb3Numero"/>

            <EditText
                android:id="@+id/edtDinoSem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lb4Numero"/>

            <EditText
                android:id="@+id/edtDinoMes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbAleatorio"/>

            <EditText
                android:id="@+id/edtRandom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"/>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center">

                <Button
                    android:id="@+id/btnGerar"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btnGerar"
                    android:background="@drawable/shape_botao_verde"
                    android:textColor="#FFFFFF"
                    android:layout_marginBottom="10dp"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>



</LinearLayout>