<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#49ff00">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:text="@string/btnDadosSalvos"/>

    </FrameLayout>

    <ScrollView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lb1Numero"
                    android:layout_marginRight="10dp"/>
                <EditText
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp" />
                <Button
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:text="@string/btnHistorico"
                    android:background="@drawable/shape_botao_verde"
                    android:textColor="#FFFFFF"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lb2Numero"
                    android:layout_marginRight="10dp"/>
                <EditText
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp" />
                <Button
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:text="@string/btnHistorico"
                    android:background="@drawable/shape_botao_verde"
                    android:textColor="#FFFFFF"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lb3Numero"
                    android:layout_marginRight="10dp"/>
                <EditText
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp" />
                <Button
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:text="@string/btnHistorico"
                    android:background="@drawable/shape_botao_verde"
                    android:textColor="#FFFFFF"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lb4Numero"
                    android:layout_marginRight="10dp"/>
                <EditText
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp" />
                <Button
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:text="@string/btnHistorico"
                    android:background="@drawable/shape_botao_verde"
                    android:textColor="#FFFFFF"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbAleatorio"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"/>
                <EditText
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp" />
                <Button
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:text="@string/btnHistorico"
                    android:background="@drawable/shape_botao_verde"
                    android:textColor="#FFFFFF"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center">

                <Button
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_botao_verde"
                    android:textColor="#FFFFFF"
                    android:text="@string/btnAnteriores"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>